# kotars

./: Cargo.toml
cargo-katars/: Cargo.toml
cargo-kotars/: Cargo.toml
cargo-kotars/src/: AutoCloseThread.kt  main.rs
example/: Cargo.toml
example/src/: main.rs
katars/: Cargo.toml
kotars/: Cargo.toml
kotars-common/: Cargo.toml
kotars-common/src/: lib.rs
kotars/src/: functions.rs  lib.rs  structs.rs  types_transformations.rs
