[package]
name = "cargo-kotars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
kotars-common = { path = "../kotars-common" }
clap = { version = "4.5.2", features = ["derive"] }
